; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_ht.c_ampdu_dispatch.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_ht.c_ampdu_dispatch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_node = type { i32 }
%struct.mbuf = type { i32 }

@M_AMPDU_MPDU = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_node*, %struct.mbuf*)* @ampdu_dispatch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ampdu_dispatch(%struct.ieee80211_node* %0, %struct.mbuf* %1) #0 {
  %3 = alloca %struct.ieee80211_node*, align 8
  %4 = alloca %struct.mbuf*, align 8
  store %struct.ieee80211_node* %0, %struct.ieee80211_node** %3, align 8
  store %struct.mbuf* %1, %struct.mbuf** %4, align 8
  %5 = load i32, i32* @M_AMPDU_MPDU, align 4
  %6 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %7 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = or i32 %8, %5
  store i32 %9, i32* %7, align 4
  %10 = load %struct.ieee80211_node*, %struct.ieee80211_node** %3, align 8
  %11 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %12 = call i32 @ieee80211_input(%struct.ieee80211_node* %10, %struct.mbuf* %11, i32 0, i32 0)
  ret void
}

declare dso_local i32 @ieee80211_input(%struct.ieee80211_node*, %struct.mbuf*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
